Mais conteudo real nas paginas, retirando os mocks

--- a/sobre.html
+++ b/sobre.html
@@ -100,7 +100,7 @@
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 text-center">
                             <div class="message-box">
-                                <h4>História Única</h4>
+                                <h4>Breve Historial</h4>
                                 <h2 class="titulo-destaque">Como <b>chegamos</b> até aqui?</h2>
                                 <p class="lead">Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus. Sed a tellus quis mi rhoncus dignissim.</p>
 
@@ -116,32 +116,55 @@
 							<div class="about-tab">
                                 <div class="message-box text-center">
                                     <h4>Conheça-nos melhor</h4>
-                                    <h2 class="titulo-destaque">Missão, Valores e Objetivos</h2>
+                                    <h2 class="titulo-destaque">Missão, Visão, Valores e Objetivos</h2>
                                 </div><!-- end messagebox -->
                                 <br />
 								<ul class="nav nav-tabs nav-justified">
 									<li class="active"><a href="#tab_a" data-toggle="tab">Missão</a></li>
+									<li><a href="#tab_a2" data-toggle="tab">Visão</a></li>
 									<li><a href="#tab_b" data-toggle="tab">Valores</a></li>
 									<li><a href="#tab_c" data-toggle="tab">Objetivos</a></li>								
 								</ul>
 								<div class="tab-content">
 									<div class="tab-pane fade in active" id="tab_a">
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi scelerisque tortor mi, eget mattis velit sagittis id. Duis ornare mauris eu eros interdum, vitae finibus arcu ultricies. Donec vitae felis eleifend, dignissim erat a, pretium diam. Donec eu massa odio. Suspendisse et ornare lacus, pharetra imperdiet ligula.</p>
-										<p>Vestibulum ac quam id lorem semper condimentum. Nulla vel ligula turpis. Nullam luctus, mi nec rhoncus gravida, tortor est semper purus, a feugiat sapien odio non urna. Fusce pellentesque neque ut nisi rhoncus imperdiet. Sed eu purus vel turpis consectetur convallis. Donec a dolor tellus. Phasellus dignissim erat nec ipsum condimentum sollicitudin. </p>
+                                        <p class="lead">O Salão de Beleza da July tem a missão de: </p><br />
+                                        <ul>
+											<li>
+                                                <i class="fa fa-circle-o" aria-hidden="true"></i>
+                                                Oferecer tratamentos de beleza de alta qualidade, feitos por profissionais altamente treinados e qualificados, em constante melhoria.   
+                                            </li>
+											<li>
+                                                <i class="fa fa-circle-o" aria-hidden="true"></i>
+                                                Atender nossos clientes com excelência, com dedicação e atenção excepcionais para satisfazê-los. Esperamos que eles se sintam bem em nosso salão e saiam com a auto-estima maior do que quando entraram.
+                                            </li>
+                                        </ul>
+										
+									</div>
+									<div class="tab-pane fade" id="tab_a2">
+                                        <p class="lead">O Salão de Beleza da July tem a visão de: </p><br />
+                                        <ul>
+											<li>
+                                                <i class="fa fa-circle-o" aria-hidden="true"></i>
+                                                Atender clientes de todas as faixas etárias e para todos os tipos de tratamentos capilares.
+                                            </li>
+											<li>
+                                                <i class="fa fa-circle-o" aria-hidden="true"></i>
+                                                Oferecer o melhor serviço na província de Benguela e expandir os serviços em todas as zonas no municipio de Benguela até 2025.
+                                            </li>
+                                        </ul>
 									</div>
 									<div class="tab-pane fade" id="tab_b">
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi scelerisque tortor mi, eget mattis velit sagittis id. Duis ornare mauris eu eros interdum, vitae finibus arcu ultricies. Donec vitae felis eleifend, dignissim erat a, pretium diam. Donec eu massa odio. Suspendisse et ornare lacus, pharetra imperdiet ligula.</p>
+										<p class="lead">Além dos valores pré-concebidos e esperados em qualquer relacionamento pessoal e profissional, o Salão de Beleza da July se compromente a:</p><br />
 										<ul>
-											<li><i class="fa fa-circle-o" aria-hidden="true"></i>User Experince</li>
-											<li><i class="fa fa-circle-o" aria-hidden="true"></i>Full Devices</li>
-											<li><i class="fa fa-circle-o" aria-hidden="true"></i>Awesome Design</li>
-											<li><i class="fa fa-circle-o" aria-hidden="true"></i>Visual Impact</li>
-											<li><i class="fa fa-circle-o" aria-hidden="true"></i>100% Sincronized</li>
-											<li><i class="fa fa-circle-o" aria-hidden="true"></i>Custom Support</li>
+											<li><i class="fa fa-circle-o" aria-hidden="true"></i>Atender todos os clientes com respeito e profissionalismo para atingir os resultados esperados por eles.</li>
+											<li><i class="fa fa-circle-o" aria-hidden="true"></i>Valorizar cada membro da equipe e investir em seu desenvolvimento pessoal e profissional.</li>
+											<li><i class="fa fa-circle-o" aria-hidden="true"></i>Trabalhar em harmonia e buscar ter sempre um sorriso sincero no rosto para contagiar nossos clientes com essa atmosfera positiva.</li>
+											<li><i class="fa fa-circle-o" aria-hidden="true"></i>Resolver conflitos de forma justa, imparcial e envolver clientes apenas se estritamente necessário.</li>
+											<li><i class="fa fa-circle-o" aria-hidden="true"></i>Respeitar a legislação comercial e trabalhista sob qualquer hipótese.</li>
 										</ul>
 									</div>
 									<div class="tab-pane fade" id="tab_c">
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi scelerisque tortor mi, eget mattis velit sagittis id. Duis ornare mauris eu eros interdum, vitae finibus arcu ultricies. Donec vitae felis eleifend, dignissim erat a, pretium diam. Donec eu massa odio. Suspendisse et ornare lacus, pharetra imperdiet ligula.</p>
+										<p class="lead">O desenvolvimento economico e sustentável no combate a fome e a pobreza da minha familia e empregar os jovens reduzindo assim os indices de delinquência Juvenil.</p>
 									</div>
 								</div><!-- tab content -->
 							</div>
