--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
 					<div class="row">
                         <div class="col-md-8 col-md-offset-2 text-center">
                             <div class="message-box">
-                                <h4>MISSÃO, VALORES E OBJETIVOS</h4>
+                                <h2 class="titulo-destaque">Missão, Visão, Valores e Objetivos</h2>
                                 <h3 style="font-size:29px">Missão</h3>
-                                <p class="lead">Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus. Sed a tellus quis mi rhoncus dignissim.</p>
+                                <p class="lead">Atender nossos clientes com excelência, com dedicação e atenção excepcionais para satisfazê-los. Esperamos que eles se sintam bem em nosso salão e saiam com a auto-estima maior do que quando entraram.</p>
 
                                 <!-- <p> Integer rutrum ligula eu dignissim laoreet. Pellentesque venenatis nibh sed tellus faucibus bibendum. Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed vitae rutrum neque. Ut id erat sit amet libero bibendum aliquam. Donec ac egestas libero, eu bibendum risus. Phasellus et congue justo. </p> -->
 
@@ -170,7 +170,7 @@
                         <small>CONHEÇA A NOSSA EQUIPE</small>
                         <h3>NOSSA EQUIPE</h3>
                         <hr class="grd1">
-                        <p class="lead">O Salão de Beleza da July está recheado de profissionais bem capacitados e com anos de experiência no mercado. Para ver a listagem completa dos nosso profissionais clique no botão logo após a listagem.</p>
+                        <p class="lead">O Salão de Beleza da July está recheado de profissionais bem capacitados e com anos de experiência no mercado. Para ver a listagem completa dos nossos profissionais clique no botão logo após a listagem.</p>
                         </div>
                     </div><!-- end title -->
 
