--- a/sobre.html
+++ b/sobre.html
@@ -102,9 +102,8 @@
                             <div class="message-box">
                                 <h4>Breve Historial</h4>
                                 <h2 class="titulo-destaque">Como <b>chegamos</b> até aqui?</h2>
-                                <p class="lead">Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus. Sed a tellus quis mi rhoncus dignissim.</p>
-
-                                <p> Integer rutrum ligula eu dignissim laoreet. Pellentesque venenatis nibh sed tellus faucibus bibendum. Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed vitae rutrum neque. Ut id erat sit amet libero bibendum aliquam. Donec ac egestas libero, eu bibendum risus. Phasellus et congue justo. </p>
+                                <p class="lead">O Salão de Beleza da July é a realização de um sonho, durante a sua realização obstáculos foram ultrapassados e o que antes era sonho hoje é realidade.</p>
+                                <p class="titulo-destaque">Empreendimento criado por <b>Juliana Luiz</b>, empreendedora há mais de 13 anos. O Salão de Beleza da July foi inaugurado aos <b class="not-styled">4 de Junho de 2022</b>, no bairro do <i class="not-styled">Calombutão, em Benguela</i>.</p>
                             </div><!-- end messagebox -->
                         </div><!-- end col -->
                     </div><!-- end row -->
