Mais conteudo real nas paginas, retirando os mocks

--- a/sobre.html
+++ b/sobre.html
@@ -122,7 +122,7 @@
 									<li class="active"><a href="#tab_a" data-toggle="tab">Missão</a></li>
 									<li><a href="#tab_a2" data-toggle="tab">Visão</a></li>
 									<li><a href="#tab_b" data-toggle="tab">Valores</a></li>
-									<li><a href="#tab_c" data-toggle="tab">Objetivos</a></li>								
+									<li><a href="#tab_c" data-toggle="tab">Objetivo(s)</a></li>								
 								</ul>
 								<div class="tab-content">
 									<div class="tab-pane fade in active" id="tab_a">
@@ -163,7 +163,13 @@
 										</ul>
 									</div>
 									<div class="tab-pane fade" id="tab_c">
-										<p class="lead">O desenvolvimento economico e sustentável no combate a fome e a pobreza da minha familia e empregar os jovens reduzindo assim os indices de delinquência Juvenil.</p>
+										<p class="lead citacao"><i class="fa fa-quote-left"></i> O desenvolvimento económico e sustentável no combate a fome e a pobreza da minha familia e empregar os jovens reduzindo assim os indices de delinquência Juvenil. <i class="fa fa-quote-right"></i></p>
+                                        <div class="testimonial clearfix">
+                                            <div class="testi-meta">
+                                                <img src="/images/func0.jpg" alt="" class="img-responsive alignright">
+                                                <h4>Juliana Luiz <small> - A Proprietária</small></h4>
+                                            </div>
+                                        </div>
 									</div>
 								</div><!-- tab content -->
 							</div>
