--- a/index.html
+++ b/index.html
@@ -122,12 +122,15 @@
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 text-center">
                             <div class="message-box">
-                                <h4>SOBRE</h4>
+                                <h4>Secção introdutória</h4>
                                 <h3 style="font-size:29px" class="titulo-destaque">Bem-vindo ao <b>Salão de Beleza da July</b></h3>
-                                <p class="lead">Quisque eget nisl id nulla sagittis auctor quis id. Aliquam quis vehicula enim, non aliquam risus. Sed a tellus quis mi rhoncus dignissim.</p>
+                                <p class="lead">Oferecemos os melhores serviços de Beleza Estética com os melhores preços no mercado.</p>
 
-                                <p> Integer rutrum ligula eu dignissim laoreet. Pellentesque venenatis nibh sed tellus faucibus bibendum. Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed vitae rutrum neque. Ut id erat sit amet libero bibendum aliquam. Donec ac egestas libero, eu bibendum risus. Phasellus et congue justo. </p>
-
+                                <p> Caro utilizador, saiba mais sobre o Salão de Beleza da July navegando pelas páginas da nossa plataforma. Veja os nossos serviços e a equipe responsável pelo salão.
+                                    <br /> 
+                                    Não exite em nos <a href="tel:+244-947-911-646">contactar</a> caso precises de obter alguma informação não fornecida pela plataforma.
+                                </p>
+                                
                                 <a href="sobre.html" data-scroll class="btn btn-light btn-radius btn-brd grd1 effect-1">VER MAIS</a>
                             </div><!-- end messagebox -->
                         </div><!-- end col -->
@@ -138,8 +141,9 @@
 					<div class="row">
                         <div class="col-md-8 col-md-offset-2 text-center">
                             <div class="message-box">
-                                <h2 class="titulo-destaque">Missão, Visão, Valores e Objetivos</h2>
-                                <h3 style="font-size:29px">Missão</h3>
+                                <small>SOBRE</small>
+                                <h3 style="font-size:30px" class="titulo-destaque" >Missão, Visão, Valores e Objetivos</h3>
+                                <h3 style="font-size:20px">Missão</h3>
                                 <p class="lead">Atender nossos clientes com excelência, com dedicação e atenção excepcionais para satisfazê-los. Esperamos que eles se sintam bem em nosso salão e saiam com a auto-estima maior do que quando entraram.</p>
 
                                 <!-- <p> Integer rutrum ligula eu dignissim laoreet. Pellentesque venenatis nibh sed tellus faucibus bibendum. Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed vitae rutrum neque. Ut id erat sit amet libero bibendum aliquam. Donec ac egestas libero, eu bibendum risus. Phasellus et congue justo. </p> -->
