Mais conteudo real nas paginas, retirando os mocks

--- a/index.html
+++ b/index.html
@@ -141,8 +141,9 @@
 					<div class="row">
                         <div class="col-md-8 col-md-offset-2 text-center">
                             <div class="message-box">
-                                <small>SOBRE</small>
+                                <h4>SOBRE NÓS</h4>
                                 <h3 style="font-size:30px" class="titulo-destaque" >Missão, Visão, Valores e Objetivos</h3>
+                                <br />
                                 <h3 style="font-size:20px">Missão</h3>
                                 <p class="lead">Atender nossos clientes com excelência, com dedicação e atenção excepcionais para satisfazê-los. Esperamos que eles se sintam bem em nosso salão e saiam com a auto-estima maior do que quando entraram.</p>
 
