Mais conteudo real nas paginas, retirando os mocks

--- a/sobre.html
+++ b/sobre.html
@@ -129,11 +129,11 @@
                                         <p class="lead">O Salão de Beleza da July tem a missão de: </p><br />
                                         <ul>
 											<li>
-                                                <i class="fa fa-circle-o" aria-hidden="true"></i>
+                                                <i class="fa fa-circle" aria-hidden="true"></i>
                                                 Oferecer tratamentos de beleza de alta qualidade, feitos por profissionais altamente treinados e qualificados, em constante melhoria.   
                                             </li>
 											<li>
-                                                <i class="fa fa-circle-o" aria-hidden="true"></i>
+                                                <i class="fa fa-circle" aria-hidden="true"></i>
                                                 Atender nossos clientes com excelência, com dedicação e atenção excepcionais para satisfazê-los. Esperamos que eles se sintam bem em nosso salão e saiam com a auto-estima maior do que quando entraram.
                                             </li>
                                         </ul>
@@ -143,11 +143,11 @@
                                         <p class="lead">O Salão de Beleza da July tem a visão de: </p><br />
                                         <ul>
 											<li>
-                                                <i class="fa fa-circle-o" aria-hidden="true"></i>
+                                                <i class="fa fa-circle" aria-hidden="true"></i>
                                                 Atender clientes de todas as faixas etárias e para todos os tipos de tratamentos capilares.
                                             </li>
 											<li>
-                                                <i class="fa fa-circle-o" aria-hidden="true"></i>
+                                                <i class="fa fa-circle" aria-hidden="true"></i>
                                                 Oferecer o melhor serviço na província de Benguela e expandir os serviços em todas as zonas no municipio de Benguela até 2025.
                                             </li>
                                         </ul>
@@ -155,11 +155,11 @@
 									<div class="tab-pane fade" id="tab_b">
 										<p class="lead">Além dos valores pré-concebidos e esperados em qualquer relacionamento pessoal e profissional, o Salão de Beleza da July se compromente a:</p><br />
 										<ul>
-											<li><i class="fa fa-circle-o" aria-hidden="true"></i>Atender todos os clientes com respeito e profissionalismo para atingir os resultados esperados por eles.</li>
-											<li><i class="fa fa-circle-o" aria-hidden="true"></i>Valorizar cada membro da equipe e investir em seu desenvolvimento pessoal e profissional.</li>
-											<li><i class="fa fa-circle-o" aria-hidden="true"></i>Trabalhar em harmonia e buscar ter sempre um sorriso sincero no rosto para contagiar nossos clientes com essa atmosfera positiva.</li>
-											<li><i class="fa fa-circle-o" aria-hidden="true"></i>Resolver conflitos de forma justa, imparcial e envolver clientes apenas se estritamente necessário.</li>
-											<li><i class="fa fa-circle-o" aria-hidden="true"></i>Respeitar a legislação comercial e trabalhista sob qualquer hipótese.</li>
+											<li><i class="fa fa-circle" aria-hidden="true"></i>Atender todos os clientes com respeito e profissionalismo para atingir os resultados esperados por eles.</li>
+											<li><i class="fa fa-circle" aria-hidden="true"></i>Valorizar cada membro da equipe e investir em seu desenvolvimento pessoal e profissional.</li>
+											<li><i class="fa fa-circle" aria-hidden="true"></i>Trabalhar em harmonia e buscar ter sempre um sorriso sincero no rosto para contagiar nossos clientes com essa atmosfera positiva.</li>
+											<li><i class="fa fa-circle" aria-hidden="true"></i>Resolver conflitos de forma justa, imparcial e envolver clientes apenas se estritamente necessário.</li>
+											<li><i class="fa fa-circle" aria-hidden="true"></i>Respeitar a legislação comercial e trabalhista sob qualquer hipótese.</li>
 										</ul>
 									</div>
 									<div class="tab-pane fade" id="tab_c">
