Inserindo banners que têm realmente a ver com o salão

--- a/horario.html
+++ b/horario.html
@@ -101,7 +101,7 @@
                         <small>HORÁRIO CONSISTENTE</small>
                         <h3 class="titulo-destaque">Disponiveis de <i>Segunda</i> à <i>Sabádo</i></h3>
                         <hr class="grd1">
-                        <p class="lead">O Salão de beleza da July está aberto nos dias da semana desde o periodo da manhã até o periodo da tarde, para mais detalhes confira o horário abaixo.</p>
+                        <p class="lead">O Salão de beleza da July está aberto nos dias da semana desde o períododa manhã até o períododa tarde, para mais detalhes confira o horário abaixo.</p>
                         <a href="#section-horario" data-scroll>
                             <span class="fa fa-arrow-down arrow-down-animate"></span>
                         </a>
