--- a/equipe.html
+++ b/equipe.html
@@ -68,7 +68,7 @@
         <div id="page-content-wrapper">
             <a href="#menu-toggle" class="menuopener" id="menu-toggle"><i class="fa fa-bars"></i></a>
 			
-            <div class="all-page-bar">
+            <div class="all-page-bar equipe-container">
 				<div class="container">
 					<div class="row">
 						<div class="col-xs-12 col-sm-12 col-md-12">
