--- a/servicos.html
+++ b/servicos.html
@@ -68,7 +68,7 @@
         <div id="page-content-wrapper">
             <a href="#menu-toggle" class="menuopener" id="menu-toggle"><i class="fa fa-bars"></i></a>
 			
-            <div class="all-page-bar">
+            <div class="all-page-bar servicos-container">
 				<div class="container">
 					<div class="row">
 						<div class="col-xs-12 col-sm-12 col-md-12">
@@ -78,7 +78,7 @@
 								</div>
 								<div class="clearfix"></div>
 								<ol class="breadcrumb">
-									<li><a href="index-3.html">Home</a></li>
+									<li><a href="index.html">Home</a></li>
 									<li class="active">Nossos Serviços</li>
 								</ol>
 								<div class="much">
