Testemunhos melhor estilizados

--- a/index.html
+++ b/index.html
@@ -192,10 +192,10 @@
                 <div class="container-fluid">
                     <div class="section-title row text-center">
                         <div class="col-md-8 col-md-offset-2">
-                        <small>DECLARAÇÃO DE CLIENTES</small>
-                        <h3>RECOMENDAÇÕES</h3>
+                        <small>LISTA DE DECLARAÇÕES</small>
+                        <h3>DECLARAÇÕES</h3>
                         <hr class="grd1">
-                        <p class="lead">Veja o que outras pessoas estam falando do Salão de Beleza da July.</p>
+                        <p class="lead">Veja o que outras pessoas estão falando do Salão de Beleza da July, desde funcionários, entidades públicas e clientes.</p>
                         </div>
                     </div><!-- end title -->
 
