--- a/index.html
+++ b/index.html
@@ -201,18 +201,8 @@
 
                     <div class="row">
                         <div class="col-md-12 col-sm-12">
-                            <div class="testi-carousel owl-carousel owl-theme">                                
-                                <div class="testimonial clearfix">
-                                    <div class="desc">
-                                        <h3><i class="fa fa-quote-left"></i> Suporte Incrivel</h3>
-                                        <p class="lead">Aqui vai algum comentário que esta pessoa está a fazer sobre o Salão da July, seus Serviços, suas experiencias enquanto cliente. Basicamente o seu testemundo sincero.</p>
-                                    </div>
-                                    <div class="testi-meta">
-                                        <img src="/images/user.jpg" alt="" class="img-responsive alignright">
-                                        <h4>Nome da Pessoa <small>- Profissão</small></h4>
-                                    </div>
-                                    <!-- end testi-meta -->
-                                </div>
+                            <div class="testi-carousel owl-carousel owl-theme declaracoes">
+                                
                                 <div class="testimonial clearfix">
                                     <div class="desc">
                                         <h3><i class="fa fa-quote-left"></i> Equipe Talentosa</h3>
@@ -294,6 +284,7 @@
     <script src="js/custom.js"></script>
     <script src="js/equipe.js"></script>
     <script src="js/demonstracao.js"></script>
+    <!-- <script src="js/declaracoes.js"></script> -->
 
     <!-- Menu Toggle Script -->
     <script>
