Declaracoes embutida no HTML

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         <small>LISTA DE DECLARAÇÕES</small>
                         <h3>DECLARAÇÕES</h3>
                         <hr class="grd1">
-                        <p class="lead">Veja o que outras pessoas estão falando do Salão de Beleza da July, desde funcionários, entidades públicas e clientes.</p>
+                        <p class="lead">Abaixo tem uma lista de algumas declarações feitas a respeito do Salão de Beleza da July, declarações feitas por funcionários e entidades públicas no dia da inauguração do Salão.</p>
                         </div>
                     </div><!-- end title -->
 
@@ -205,23 +205,23 @@
                                 
                                 <div class="testimonial clearfix">
                                     <div class="desc">
-                                        <h3><i class="fa fa-quote-left"></i> Equipe Talentosa</h3>
-                                        <p class="lead">Aqui vai algum comentário que esta pessoa está a fazer sobre o Salão da July, seus Serviços, suas experiencias enquanto cliente. Basicamente o seu testemundo sincero.</p>
+                                        <h3><i class="fa fa-quote-left"></i> Conselho</h3>
+                                        <p class="lead">É necessário manter o foco e resiliência acima de tudo porque nesta caminhada existem muitos obstáculos, não se deixar influenciar pelo negativismo, mas olhar sempre em frente.</p>
                                     </div>
                                     <div class="testi-meta">
-                                        <img src="/images/user.jpg" alt="" class="img-responsive alignright">
-                                        <h4>Nome da Pessoa <small>- Profissão</small></h4>
+                                        <img src="/images/func0.jpg" alt="" class="img-responsive alignright">
+                                        <h4>Juliana Luiz <small> - A Proprietária </small></h4>
                                     </div>
                                     <!-- end testi-meta -->
                                 </div>
                                 <div class="testimonial clearfix">
                                     <div class="desc">
-                                        <h3><i class="fa fa-quote-left"></i> Serviços Incriveis</h3>
-                                        <p class="lead">Aqui vai algum comentário que esta pessoa está a fazer sobre o Salão da July, seus Serviços, suas experiencias enquanto cliente. Basicamente o seu testemundo sincero.</p>
+                                        <h3><i class="fa fa-quote-left"></i>Satisfação profissional</h3>
+                                        <p class="lead">Estou realmente muito satisfeita por mais uma oportunidade de emprego, pois a inserção dos jovens no mercado de trabalho não está fácil.</p>
                                     </div>
                                     <div class="testi-meta">
-                                        <img src="/images/user.jpg" alt="" class="img-responsive alignright">
-                                        <h4>Nome da Pessoa <small>- Profissão</small></h4>
+                                        <img src="/images/func4.jpg" alt="" class="img-responsive alignright">
+                                        <h4>Ana Pena <small> - Funcionária </small></h4>
                                     </div>
                                     <!-- end testi-meta -->
                                 </div>
@@ -229,12 +229,12 @@
                                 <!-- end testimonial -->
                                 <div class="testimonial clearfix">
                                     <div class="desc">
-                                        <h3><i class="fa fa-quote-left"></i> Suporte Incrivel</h3>
-                                        <p class="lead">Aqui vai algum comentário que esta pessoa está a fazer sobre o Salão da July, seus Serviços, suas experiencias enquanto cliente. Basicamente o seu testemundo sincero.</p>
+                                        <h3><i class="fa fa-quote-left"></i> Excelente Iniciativa</h3>
+                                        <p class="lead">É mais uma iniciativa que a <b>Associação de Jovens e Empreendedores de Angola</b> tem levado a cabo a fim de estimular a juventude ao auto-emprego a luz do combate a pobreza e o desemprego no seio da juventude.</p>
                                     </div>
                                     <div class="testi-meta">
-                                        <img src="/images/user.jpg" alt="" class="img-responsive alignright">
-                                        <h4>Nome da Pessoa <small>- Profissão</small></h4>
+                                        <!-- <img src="/images/user.jpg" alt="" class="img-responsive alignright"> -->
+                                        <h4> <small> - Presidente da <abbr title="Associação dos Jovens e Empreendedores de Angola">AJEA</abbr></small></h4>
                                     </div>
                                     <!-- end testi-meta -->
                                 </div>
