--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         <small>LISTA DE DECLARAÇÕES</small>
                         <h3>DECLARAÇÕES</h3>
                         <hr class="grd1">
-                        <p class="lead">Abaixo tem uma lista de algumas declarações feitas a respeito do Salão de Beleza da July, declarações feitas por funcionários e entidades públicas no dia da inauguração do Salão.</p>
+                        <p class="lead">Abaixo temos uma lista de algumas declarações feitas a respeito do Salão de Beleza da July. Declarações feitas por funcionários e entidades públicas no dia da inauguração do Salão.</p>
                         </div>
                     </div><!-- end title -->
 
@@ -206,7 +206,7 @@
                                 <div class="testimonial clearfix">
                                     <div class="desc">
                                         <h3><i class="fa fa-quote-left"></i> Conselho</h3>
-                                        <p class="lead">É necessário manter o foco e resiliência acima de tudo porque nesta caminhada existem muitos obstáculos, não se deixar influenciar pelo negativismo, mas olhar sempre em frente.</p>
+                                        <p class="lead">É necessário manter o foco e resiliência acima de tudo porque nesta caminhada existem muitos obstáculos, não se deixar influenciar pelo negativismo, invés disso, olhar sempre em frente.</p>
                                     </div>
                                     <div class="testi-meta">
                                         <img src="/images/func0.jpg" alt="" class="img-responsive alignright">
@@ -230,7 +230,7 @@
                                 <div class="testimonial clearfix">
                                     <div class="desc">
                                         <h3><i class="fa fa-quote-left"></i> Excelente Iniciativa</h3>
-                                        <p class="lead">É mais uma iniciativa que a <b>Associação de Jovens e Empreendedores de Angola</b> tem levado a cabo a fim de estimular a juventude ao auto-emprego a luz do combate a pobreza e o desemprego no seio da juventude.</p>
+                                        <p class="lead">É mais uma iniciativa que a <b><abbr title="Associação dos Jovens e Empreendedores de Angola">AJEA</abbr> </b> tem levado a cabo a fim de estimular a juventude ao auto-emprego a luz do combate a pobreza e o desemprego no seio da juventude.</p>
                                     </div>
                                     <div class="testi-meta">
                                         <!-- <img src="/images/user.jpg" alt="" class="img-responsive alignright"> -->
