--- a/horario.html
+++ b/horario.html
@@ -140,42 +140,7 @@
 							</div>
 						</div>
                         <div class="col-md-6">
-                            <div class="contact_form">
-                                <div id="message">
-                                    <h3 class="form-contact-title">Formulário de Contato</h3>
-                                </div>
-                                <form id="contactform" class="row" method="post" action="mailto:franciscofetapi10@gmail.com" name="contactform" enctype="multipart/form-data">
-                                    <fieldset class="row-fluid">
-                                        <input type="hidden" name="subject" value="Salão da July - Agendamento"/>
-                                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                            <input type="text" name="first_name" id="first_name" class="form-control" placeholder="Nome">
-                                        </div>
-                                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                            <input type="text" name="last_name" id="last_name" class="form-control" placeholder="Sobrenome">
-                                        </div>
-                                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                            <input type="email" name="email" id="email" class="form-control" placeholder="Email">
-                                        </div>
-                                        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                            <input type="text" name="phone" id="phone" class="form-control" placeholder="Telefone">
-                                        </div>
-                                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                            <label class="sr-only">Escolher Horário</label>
-                                            <select name="select_service" value="" id="select_service" class="selectpicker" data-style="btn-white">
-                                                <option value="" selected>Escolher horário</option>
-                                                <option value="Weekdays">Dias na semana</option>
-                                                <option value="Weekend">Finais de semana</option>
-                                            </select>
-                                        </div>
-                                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                                            <textarea class="form-control" name="body" id="comments" rows="6" placeholder="Escreva alguma mensagem"></textarea>
-                                        </div>
-                                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-                                            <button type="submit" value="SEND" id="submit" class="btn btn-light btn-radius btn-brd grd1 subt">Enviar</button>
-                                        </div>
-                                    </fieldset>
-                                </form>
-                            </div>
+                            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc4mrV30CCjg0XVuVOBMK2OMHShCplCmR0rY7F5d-sOuyycRQ/viewform?embedded=true" width="100%" height="580" frameborder="0" marginheight="0" marginwidth="0">A carregar…</iframe>
                         </div><!-- end col -->
                     </div><!-- end row -->
                 </div><!-- end container -->
