ajustes na responsividade

--- a/sobre.html
+++ b/sobre.html
@@ -179,7 +179,7 @@
                 </div><!-- end container -->
             </div><!-- end section -->
 
-            <div class="iframe-youtube">
+            <div class="iframe-youtube container">
                 <div class="message-box text-center">
                     <h4>YouTube - TPA</h4>
                     <h2 class="titulo-destaque">Reportagem</h2>
@@ -187,7 +187,7 @@
                 <br />
                 <iframe width="100%" height="440" src="https://www.youtube.com/embed/MAWEAfWmY5k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-            
+
             <br />
 
             <div class="copyrights">
