padding adicionado em alguns containers

--- a/horario.html
+++ b/horario.html
@@ -94,7 +94,7 @@
                 <a href="#"><h3>Saiba de antemão os momentos do dia em que abrimos e fechamos o Salão.</h3></a>
             </section>
 
-            <div id="appointment" class="section wb bg-body">
+            <div id="appointment" class="section p-horario wb bg-body">
                 <div class="container-fluid">
                     <div class="section-title row text-center">
                         <div class="col-md-8 col-md-offset-2">
