--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <a href="horario.html"><h3>Você está interessado no trabalho incrivel da nossa equipe? Clique aqui</h3></a>
             </section>
 
-            <div class="section wb bg-body">
+            <div class="section p-index wb bg-body">
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 text-center">
