--- a/servicos.html
+++ b/servicos.html
@@ -95,7 +95,7 @@
                 <a href="#"><h3>Serviços e Atendimento de qualidade</h3></a>
             </section>
 
-            <div id="services" class="section lb">
+            <div id="services" class="section p-servicos lb">
                 <div class="container-fluid">
                     <div class="section-title row text-center">
                         <div class="col-md-8 col-md-offset-2">
