--- a/sobre.html
+++ b/sobre.html
@@ -95,7 +95,7 @@
                 <a href="#"><h3 style="font-size: 18px;">Conheça mais sobre o historial, motivações e objetivos da <b>July Otchacati - Salão de Beleza Estético</b></h3></a>
             </section>
 
-            <div class="section wb bg-body">
+            <div class="section p-sobre wb bg-body p-sobre">
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 text-center">
