--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <a href="#menu-toggle" class="menuopener" id="menu-toggle"><i class="fa fa-bars"></i></a>
 			
             <div id="home" class="parallax first-section" data-stellar-background-ratio="0.4" style="background-image:url('/images/banner.jpg');">
-                <div class="container-fluid">
+                <div class="container-fluid banner-home">
                     <div class="row">
 						<div id="full-width" class="owl-carousel owl-theme">
 							<div class="text-center item">
