--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         </div><!-- end col -->
                     </div><!-- end row -->
 					
-                    <hr class="hr1"> 
+                    <hr class="hr1 hr-demonstracao"> 
 
                     <div class="row text-center lista-demonstracao">
                         <div class="section-title">
