--- a/horario.html
+++ b/horario.html
@@ -53,11 +53,11 @@
                 </div>
 				</div>
 				<ul class="sidebar-nav">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="sobre.html">Sobre Nós</a></li>
-					<li><a href="servicos.html">Serviços</a></li>
-					<li><a href="equipe.html">Nossa Equipe</a></li>
-					<li><a class="active" href="horario.html">Horário</a></li>
+					<li><a href="index.html">Home <span class="fa fa-home"></span></a></li>
+					<li><a href="sobre.html">Sobre Nós <span class="fa fa-info-circle"></span></a></li>
+					<li><a href="servicos.html">Serviços <span class="fa fa-list-alt"></span> </a></li>
+					<li><a href="equipe.html">Nossa Equipe <span class="fa fa-users"></span></a></li>
+					<li><a href="horario.html" class="active">Horário <span class="fa fa-clock-o"></span></a></li>
 				</ul>
 			</div>
         </div>
