ajustes e mais ajustes

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                         <div class="col-md-8 col-md-offset-2">
                         <small>LISTA DE DECLARAÇÕES</small>
                         <h3>DECLARAÇÕES</h3>
-                        <hr class="grd1">
+                        <hr class="grd1" id="grd1-testimonials">
                         <p class="lead">Abaixo temos uma lista de algumas declarações feitas a respeito do Salão de Beleza da July. Declarações feitas por funcionários e entidades públicas no dia da inauguração do Salão.</p>
                         </div>
                     </div><!-- end title -->
