--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <!-- Site Metas -->
     <title>Salão de Beleza da July</title>
     <meta name="keywords" content="Salão, July, Beleza, Benguela, Calombutão">
-    <meta name="description" content="Salão de Beleza da July, tudo o que você merece para turbinar a sua aparência em um uníco lugar.">
+    <meta name="description" content="Salão de Beleza da July, tudo o que você merece para melhorar a sua aparência em um único lugar.">
     <meta name="author" content="Francisco Fetapi">
 
     <!-- Site Icons -->
@@ -90,7 +90,7 @@
 										<h2 class="p-0" style="text-transform: none;"><strong style="font-size:52px;">Corte de cabelo</strong>
 										<!-- <div class="text-right" style="font-size:19px;margin-top: -20px;opacity: .8;">Em Benguela</div> -->
                                     </h2>
-										<p class="lead">Todas as insirações e tendências em cores , quimica e cortes. </p>
+										<p class="lead">Todas as inspirações e tendências em cores , química e cortes. </p>
 										<a href="horario.html" class="btn btn-light btn-radius btn-brd grd1 effect-1 butn">AGENDAR AGORA</a>
 									</div>
 								</div>
@@ -114,7 +114,7 @@
             </div><!-- end section -->
 
             <section class="section nopad cac text-center d-none d-xl-block">
-                <a href="horario.html"><h3>Você está interessado no trabalho incrivel da nossa equipe? Clique aqui</h3></a>
+                <a href="horario.html"><h3>Você está interessado no trabalho incrível da nossa equipe? Clique aqui</h3></a>
             </section>
 
             <div class="section p-index wb bg-body">
@@ -147,8 +147,6 @@
                                 <h3 style="font-size:20px">Missão</h3>
                                 <p class="lead">Atender nossos clientes com excelência, com dedicação e atenção excepcionais para satisfazê-los. Esperamos que eles se sintam bem em nosso salão e saiam com a auto-estima maior do que quando entraram.</p>
 
-                                <!-- <p> Integer rutrum ligula eu dignissim laoreet. Pellentesque venenatis nibh sed tellus faucibus bibendum. Sed fermentum est vitae rhoncus molestie. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed vitae rutrum neque. Ut id erat sit amet libero bibendum aliquam. Donec ac egestas libero, eu bibendum risus. Phasellus et congue justo. </p> -->
-
                                 <a href="/sobre.html" class="btn btn-light btn-sm btn-radius btn-brd grd1 effect-1">MAIS SOBRE NÓS</a>
                             </div><!-- end messagebox -->
                         </div><!-- end col -->
@@ -163,7 +161,7 @@
                             <hr class="grd1">
                         </div>
                        
-                        <!-- AQUI VAI APARECER A LISTA DE DEMONSTRACAO -->
+                        <!-- AQUI VAI APARECER A LISTA DE DEMONSTRAÇÃO -->
                     </div><!-- end row -->
                 </div><!-- end container -->
             </div><!-- end section -->
@@ -180,7 +178,7 @@
                     </div><!-- end title -->
 
                     <div class="row dev-list text-center">
-                      <!-- AQUI ESTARA UMA LISTA DE FUNCIONARIOS -->
+                      <!-- AQUI ESTARÁ UMA LISTA DE FUNCIONÁRIOS -->
                         <div style="text-align: center;">
                             <a href="/equipe.html" class="btn btn-light btn-sm btn-radius btn-brd grd1 effect-1">VER MAIS</a>
                         </div>
@@ -210,7 +208,7 @@
                                     </div>
                                     <div class="testi-meta">
                                         <img src="/images/func0.jpg" alt="" class="img-responsive alignright">
-                                        <h4>Juliana Luiz <small> - A Proprietária </small></h4>
+                                        <h4>Juliana Luís <small> - A Proprietária </small></h4>
                                     </div>
                                     <!-- end testi-meta -->
                                 </div>
