--- a/sobre.html
+++ b/sobre.html
@@ -103,7 +103,7 @@
                                 <h4>Breve Historial</h4>
                                 <h2 class="titulo-destaque">Como <b>chegamos</b> até aqui?</h2>
                                 <p class="lead">O Salão de Beleza da July é a realização de um sonho, durante a sua realização obstáculos foram ultrapassados e o que antes era sonho hoje é realidade.</p>
-                                <p class="titulo-destaque">Empreendimento criado por <b>Juliana Luiz</b>, empreendedora há mais de 13 anos. O Salão de Beleza da July foi inaugurado aos <b class="not-styled">4 de Junho de 2022</b>, no bairro do <i class="not-styled">Calombutão, em Benguela</i>.</p>
+                                <p class="titulo-destaque">Empreendimento criado por <b>Juliana Luís</b>, empreendedora há mais de 13 anos. O Salão de Beleza da July foi inaugurado aos <b class="not-styled">4 de Junho de 2022</b>, no bairro do <i class="not-styled">Calombutão, em Benguela</i>.</p>
                             </div><!-- end messagebox -->
                         </div><!-- end col -->
                     </div><!-- end row -->
@@ -167,7 +167,7 @@
                                         <div class="testimonial clearfix">
                                             <div class="testi-meta">
                                                 <img src="/images/func0.jpg" alt="" class="img-responsive alignright">
-                                                <h4>Juliana Luiz <small> - A Proprietária</small></h4>
+                                                <h4>Juliana Luís <small> - A Proprietária</small></h4>
                                             </div>
                                         </div>
 									</div>
