Footer injetado dinamicamente via JavaScript

--- a/index.html
+++ b/index.html
@@ -263,10 +263,7 @@
                 </div><!-- end container -->
                 <div class="footer-links-social">
                     <ul class="list-unstyled">
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-whatsapp"></i></a></li>
-                        <li><a href="#"><i class="fa fa-google"></i></a></li>
-                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                        <!-- AQUI VAI APARECER OS SOCIAL LINKS -->                    
                     </ul>
                 </div>
             </div><!-- end copyrights -->
@@ -283,6 +280,7 @@
     <script src="js/equipe.js"></script>
     <script src="js/demonstracao.js"></script>
     <!-- <script src="js/declaracoes.js"></script> -->
+    <script src="js/footer.js"></script>
 
     <!-- Menu Toggle Script -->
     <script>
