--- a/servicos.html
+++ b/servicos.html
@@ -159,10 +159,7 @@
                 </div><!-- end container -->
                 <div class="footer-links-social">
                     <ul class="list-unstyled">
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-whatsapp"></i></a></li>
-                        <li><a href="#"><i class="fa fa-google"></i></a></li>
-                        <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                        <!-- AQUI VAI APARECER OS SOCIAL LINKS -->
                     </ul>
                 </div>
             </div><!-- end copyrights -->
@@ -176,6 +173,7 @@
 	<script src="js/responsive-tabs.js"></script>
     <!-- ALL PLUGINS -->
     <script src="js/custom.js"></script>
+    <script src="js/footer.js"></script>
 
     <!-- Menu Toggle Script -->
     <script>
