--- a/horario.html
+++ b/horario.html
@@ -113,28 +113,8 @@
 							<div class="appointment-left">
 								<h2>Horário</h2>
 								<div class="appointment-time">
-									<ul>
-										<li>
-											<span>Segunda-Feira </span><span>9h - 18h</span>
-										</li>
-										<li>
-											<span>Terça-Feira </span><span>9h - 18h</span>
-										</li>
-										<li>
-											<span>Quarta-Feira </span><span>9h - 18h</span>
-										</li>
-										<li>
-											<span>Quinta-Feira </span><span>9h - 18h</span>
-										</li>
-										<li>
-											<span>Sexta-Feira  </span><span>9h - 18h</span>
-										</li>
-										<li>
-											<span>Sábado  </span><span>10h - 16h</span>
-										</li>
-										<li>
-											<span>Domingo  </span><span>FECHADO</span>
-										</li>
+									<ul id="horario-lista">
+										<!-- AQUI IRA APARECER O HORARIO -->
 									</ul>
 								</div>
 							</div>
@@ -228,6 +208,7 @@
     <!-- ALL PLUGINS -->
     <script src="js/custom.js"></script>
     <script src="js/footer.js"></script>
+    <script src="js/horario.js"></script>
 
     <!-- Menu Toggle Script -->
     <script>
