caprichos e mais caprichos

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                                 
                                 <div class="testimonial clearfix">
                                     <div class="desc">
-                                        <h3><i class="fa fa-quote-left"></i> Conselho</h3>
+                                        <h3><i class="fa fa-quote-left"></i> Não Desista</h3>
                                         <p class="lead">É necessário manter o foco e resiliência acima de tudo porque nesta caminhada existem muitos obstáculos, não se deixar influenciar pelo negativismo, invés disso, olhar sempre em frente.</p>
                                     </div>
                                     <div class="testi-meta">
