bug corrigido ao retirnar Object.entries

--- a/equipe.html
+++ b/equipe.html
@@ -150,8 +150,11 @@
     <script src="js/all.js"></script>
 	<script src="js/responsive-tabs.js"></script>
     <!-- ALL PLUGINS -->
+
+    <!-- MY CUSTOM SCRIPT -->
     <script src="js/custom.js"></script>
-    <script src="js/footer.js"></script>
+    <script src="dist/footer.js"></script>
+    <script src="dist/equipe.js"></script>
 
     <!-- Menu Toggle Script -->
     <script>
@@ -172,7 +175,5 @@
     })(jQuery);
     </script>
 
-<!-- MY CUSTOM SCRIPT -->
-<script src="/js/equipe.js"></script>
 </body>
 </html>
