ficheiros js otimizados para es5

--- a/horario.html
+++ b/horario.html
@@ -207,8 +207,8 @@
 	<script src="js/responsive-tabs.js"></script>
     <!-- ALL PLUGINS -->
     <script src="js/custom.js"></script>
-    <script src="js/footer.js"></script>
-    <script src="js/horario.js"></script>
+    <script src="dist/footer.js"></script>
+    <script src="dist/horario.js"></script>
 
     <!-- Menu Toggle Script -->
     <script>
