--- a/index.html
+++ b/index.html
@@ -277,10 +277,10 @@
 	<script src="js/responsive-tabs.js"></script>
     <!-- ALL PLUGINS -->
     <script src="js/custom.js"></script>
-    <script src="js/equipe.js"></script>
-    <script src="js/demonstracao.js"></script>
+    <script src="dist/equipe.js"></script>
+    <script src="dist/demonstracao.js"></script>
     <!-- <script src="js/declaracoes.js"></script> -->
-    <script src="js/footer.js"></script>
+    <script src="dist/footer.js"></script>
 
     <!-- Menu Toggle Script -->
     <script>
