--- a/servicos.html
+++ b/servicos.html
@@ -173,7 +173,8 @@
 	<script src="js/responsive-tabs.js"></script>
     <!-- ALL PLUGINS -->
     <script src="js/custom.js"></script>
-    <script src="js/footer.js"></script>
+    <script src="dist/footer.js"></script>
+    <script src="dist/servicos.js"></script>
 
     <!-- Menu Toggle Script -->
     <script>
@@ -194,7 +195,7 @@
     })(jQuery);
     </script>
 
-    <script src="./js/servicos.js"></script>
+    
 
 </body>
 </html>
