--- a/sobre.html
+++ b/sobre.html
@@ -225,7 +225,7 @@
 	<script src="js/responsive-tabs.js"></script>
     <!-- ALL PLUGINS -->
     <script src="js/custom.js"></script>
-    <script src="js/footer.js"></script>
+    <script src="dist/footer.js"></script>
 
     <!-- Menu Toggle Script -->
     <script>
