melhorando SEO da pagina principal

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     <div id="wrapper">
 
         <!-- Sidebar-wrapper -->
-        <div id="sidebar-wrapper">
-			<div class="side-top">
+      <aside id="sidebar-wrapper">
+			<nav class="side-top">
 				<div class="logo-sidebar">
 					<a href="index.html"><img src="/images/logos/logo.png" alt="image"></a>
                     <div class="nome-salao">
@@ -61,15 +61,15 @@
 					<li><a href="horario.html">Horário <span class="fa fa-clock-o"></span></a></li>
 					
 				</ul>
-			</div>
-        </div>
+			</nav>
+        </aside>
         <!-- End Sidebar-wrapper -->
 
         <!-- Page Content -->
         <div id="page-content-wrapper">
             <a href="#menu-toggle" class="menuopener" id="menu-toggle"><i class="fa fa-bars"></i></a>
 			
-            <div id="home" class="parallax first-section" data-stellar-background-ratio="0.4" style="background-image:url('/images/banner.jpg');">
+            <header id="home" class="parallax first-section" data-stellar-background-ratio="0.4" style="background-image:url('/images/banner.jpg');">
                 <div class="container-fluid banner-home">
                     <div class="row">
 						<div id="full-width" class="owl-carousel owl-theme">
@@ -111,12 +111,13 @@
 						</div>
                     </div><!-- end row -->
                 </div><!-- end container -->
-            </div><!-- end section -->
+            </header><!-- end section -->
 
             <section class="section nopad cac text-center d-none d-xl-block">
                 <a href="horario.html"><h3>Você está interessado no trabalho incrível da nossa equipe? Clique aqui</h3></a>
             </section>
 
+            <main>
             <div class="section p-index wb bg-body">
                 <div class="container-fluid">
                     <div class="row">
@@ -244,7 +245,9 @@
                 </div><!-- end container -->
             </div><!-- end section -->
 
-            <div class="copyrights">
+          </main>
+
+            <footer class="copyrights">
                 <div class="container-fluid">
                     <div class="footer-distributed">
                         <div class="footer-left">
@@ -266,7 +269,7 @@
                         <!-- AQUI VAI APARECER OS SOCIAL LINKS -->                    
                     </ul>
                 </div>
-            </div><!-- end copyrights -->
+            </footer><!-- end copyrights -->
         </div>
     </div><!-- end wrapper -->
 
